2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * native/jni/gtk-peer/gthread-jni.c (throw):
        Call g_snprintf instead of snprintf.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * gnu/java/awt/peer/gtk/GtkWindowPeer.java,
        jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
        (getWidth): New method.
        (getHeight): Likewise.
        (create): Remove width, height and insets parameters.  Move size
        setup ...
        (realize_cb): ... here.  New function.
        (connectSignals): Connect realize_cb.
        (request_frame_extents): Remove FIXME.  Move
        postInsetsChangedEvent lookup ...
        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c (gtkInit):
        ... here.  Look up GtkWindowPeer getWidth and getHeight methods.
        * jni/gtk-peer/gtkpeer.h (postInsetsChangedEventID): Declare
        jmethodID.
        (windowGetWidthID): Likewise.
        (windowGetHeightID): Likewise.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/awt/Robot.java (waitForIdle): Call invokeAndWait on an
        empty Runnable.

2005-02-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-21  Bryce McKinlay  <mckinlay@redhat.com>

        * java/io/ObjectInputStream.java (readClassDescriptor): Cache result
        of currentLoader() in callersClassLoader field. Check for primitive
        type Class names if resolveClass throws a ClassNotFoundException.
        (resolveClass): Call currentLoader() only if callersClassLoader is
        not set. Cache result of currentLoader(). Don't check for primitive
        type Class names here.
        (callersClassLoader): New field.