@@ -4,6 +4,15 @@
 
 	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
+        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkEvents.c
+        (button_to_awt_mods): Return BUTTON masks, not BUTTON_DOWN masks.
+
+2005-02-23  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
+	2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
         * native/jni/gtk-peer/gthread-jni.c (throw):
         Call g_snprintf instead of snprintf.
 
